PyAMF Changelog
===============

This file contains information about the changes between the different
versions of PyAMF.

.. contents::

0.5.1 (unreleased)
------------------
 - Fixed a regression in TwistedGateway where services would be called twice
   (Ticket:648)
 - Fixed a bug with encoding anonymous trait references (Ticket:644)
 - Moved IndexedCollection into cpyamf (Ticket:424)
 - amf3.encode_int now encodes signed 29bit ints, not unsigned. Thanks to
   gerard for the report, investigation and patch! (Ticket:646)

0.5 (2009-09-07)
----------------
 - Added the ability to modify the timezones of dates being de/encoded for
   legacy systems. (Ticket:612)
 - Fixed a Django reference bug where parent.child.parent is parent would
   encode 3 objects and not 2. (Ticket:642)
 - Setting `None` on a Django DateField would blow up the encoder (Ticket:632)
 - `rootCause` in ErrorFault objects are now populated with the traceback
   object. (Ticket:637)
 - Support for encoding/decoding BlazeDS specific messages (Ticket:581)
 - Removed tracebacks from exception messages if debug=False (Ticket:552)
 - Support for google.appengine.ext.db.polymodel.PolyModel (Ticket:633)
 - Support for Django File/ImageField (Ticket:631)
 - Support for Django model inheritance (Ticket:626)
 - Rewrote attribute handling code. Added the ability to exclude, set
   read-only and static attributes. See http://pyamf.org/wiki/AttributeControl
   for more details. (Ticket:601)
 - Exposed the amf request object if expose_request=True.
   Twisted/Django/Google have an amf_request property on the http request
   object.  WSGI has an entry in the environ dict - pyamf.request (Ticket:234)
 - Added support for the `array` module (Ticket:468)
 - Fixed an issue with Django model AutoFields being set to 0 by the Flex
   client (Ticket:556)
 - Added support for the collections module. (Ticket:474)
 - Added type checks for class objects. (Ticket:473)